--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firza Radio - Vinyl Player 3D</title>
+    <title>Firza Radio - Vinyl Player Seamless</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
         :root {
-            --neon-color: #ff6b6b; /* SATU WARNA UTAMA */
+            --neon-color: #ff6b6b;
             --neon-dark: #cc5555;
-            --bg-dark: #1a1a2e;
         }
 
         body {
@@ -35,161 +34,149 @@
             background: rgba(255,255,255,0.2); border-radius: 50%;
             animation: float 20s infinite linear;
         }
-        @keyframes float {
-            from { transform: translateY(100vh); }
-            to { transform: translateY(-10vh); }
-        }
+        @keyframes float { from { transform: translateY(100vh); } to { transform: translateY(-10vh); } }
 
         .player-container {
             position: relative; z-index: 1;
             display: flex; flex-direction: column; align-items: center;
+            width: 100%;
         }
 
         .radio-title {
-            font-size: 1.8rem; font-weight: 700; color: #fff;
-            margin-bottom: 30px; letter-spacing: 4px;
-            text-shadow: 0 0 15px var(--neon-color), 0 0 30px var(--neon-color);
+            font-size: 1.6rem; font-weight: 700; color: #fff;
+            margin-bottom: 20px; letter-spacing: 3px;
+            text-shadow: 0 0 15px var(--neon-color);
             text-align: center;
         }
 
-        /* MAIN 3D PLAYER CASE */
+        /* BOX PLAYER */
         .vinyl-player {
             position: relative;
-            width: 360px; height: 360px;
+            width: 320px; height: 320px;
             background: linear-gradient(145deg, #23233a, #151525);
-            border-radius: 40px;
-            padding: 30px;
-            box-shadow: 
-                20px 20px 60px #0b0b14, 
-                -5px -5px 20px rgba(255,255,255,0.05),
-                inset 1px 1px 1px rgba(255,255,255,0.1);
+            border-radius: 35px;
+            padding: 25px;
+            box-shadow: 15px 15px 40px #0b0b14, -5px -5px 15px rgba(255,255,255,0.05);
         }
 
-        /* THE VINYL RECORD */
+        /* VINYL RECORD */
         .vinyl-record {
             position: relative;
             width: 100%; height: 100%;
             border-radius: 50%;
-            background: conic-gradient(from 0deg, #111, #1a1a1a, #111, #222, #111);
+            background: conic-gradient(from 0deg, #111, #1a1a1a, #111, #1a1a1a, #111);
             box-shadow: 
-                0 0 0 12px #0a0a0a,
-                0 15px 35px rgba(0,0,0,0.8),
+                0 0 0 10px #0a0a0a,
+                0 10px 25px rgba(0,0,0,0.8),
                 inset 0 0 30px rgba(0,0,0,0.8);
             display: flex; justify-content: center; align-items: center;
         }
 
+        /* GARIS ALUR VINYL - Dibuat sangat rapat agar terlihat nyata */
         .vinyl-record::after {
             content: ''; position: absolute;
-            width: 94%; height: 94%; border-radius: 50%;
-            background: repeating-radial-gradient(circle, transparent 0, transparent 2px, rgba(255,255,255,0.02) 3px);
-            pointer-events: none;
+            width: 100%; height: 100%; border-radius: 50%;
+            background: repeating-radial-gradient(circle, transparent 0, transparent 2px, rgba(255,255,255,0.03) 3px);
+            z-index: 2; pointer-events: none;
         }
 
         .vinyl-record.playing { animation: spin 10s linear infinite; }
         @keyframes spin { to { transform: rotate(360deg); } }
 
-        /* Cover Art in Center */
+        /* COVER ART - Sekarang background transparan agar alur vinyl terlihat */
         .cover-container {
             position: relative;
-            width: 52%; height: 52%;
-            border-radius: 50%; overflow: hidden;
-            z-index: 5; border: 3px solid #111;
-            box-shadow: 0 0 20px rgba(0,0,0,0.5);
+            width: 48%; height: 48%; /* Sedikit lebih kecil agar bulatan neon pas */
+            border-radius: 50%; 
+            overflow: hidden;
+            z-index: 5;
+            background: transparent; /* Hilangkan warna hitam */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        .cover-art { width: 100%; height: 100%; object-fit: cover; }
 
-        /* BULATAN ANTARA VINYL DAN COVER (SATU WARNA SOLID) */
+        .cover-art { 
+            width: 100%; height: 100%; 
+            object-fit: cover; 
+            border-radius: 50%;
+        }
+
+        /* BULATAN NEON SATU WARNA */
         .neon-ring {
             position: absolute;
-            width: 58%; height: 58%;
+            width: 54%; height: 54%;
             border-radius: 50%;
-            /* Menggunakan warna solid tanpa gradien */
-            border: 4px solid var(--neon-color); 
-            box-shadow: 0 0 20px var(--neon-color); 
+            border: 3.5px solid var(--neon-color); 
+            box-shadow: 0 0 15px var(--neon-color); 
             z-index: 6; pointer-events: none;
         }
 
         .center-hole {
-            position: absolute; width: 12px; height: 12px;
+            position: absolute; width: 10px; height: 10px;
             background: #222; border-radius: 50%;
-            z-index: 10; border: 2px solid #444;
+            z-index: 10; border: 1.5px solid #444;
         }
 
-        /* TONERM 3D */
+        /* TONERM */
         .tonearm-container {
-            position: absolute; top: -10px; right: -20px;
-            width: 130px; height: 180px; z-index: 20;
+            position: absolute; top: -10px; right: -15px;
+            width: 110px; height: 150px; z-index: 20;
         }
         .tonearm-base {
-            position: absolute; top: 10px; right: 20px;
-            width: 45px; height: 45px;
+            position: absolute; top: 15px; right: 20px;
+            width: 40px; height: 40px;
             background: radial-gradient(circle at 30% 30%, #444, #111);
             border-radius: 50%;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+            box-shadow: 0 8px 15px rgba(0,0,0,0.5);
         }
         .tonearm {
-            position: absolute; top: 30px; right: 40px;
-            width: 110px; height: 8px;
+            position: absolute; top: 32px; right: 38px;
+            width: 90px; height: 6px;
             background: linear-gradient(to bottom, #777, #333, #777);
-            border-radius: 4px;
+            border-radius: 3px;
             transform-origin: right center;
             transform: rotate(35deg);
             transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            box-shadow: 0 5px 10px rgba(0,0,0,0.4);
         }
         .tonearm.playing { transform: rotate(-35deg); }
 
-        /* JUDUL BERJALAN (MARQUEE) */
+        /* JUDUL BERJALAN */
         .info-display {
-            margin-top: 35px; text-align: center;
-            width: 100%; max-width: 360px;
+            margin-top: 25px; text-align: center;
+            width: 100%; max-width: 320px;
         }
         .now-playing-label {
-            font-size: 0.7rem; color: rgba(255,255,255,0.4);
+            font-size: 0.65rem; color: rgba(255,255,255,0.4);
             text-transform: uppercase; letter-spacing: 3px; margin-bottom: 5px;
         }
-        .marquee-box {
-            width: 100%; overflow: hidden; white-space: nowrap;
-            position: relative; height: 40px;
-        }
+        .marquee-box { width: 100%; overflow: hidden; white-space: nowrap; height: 35px; }
         #songTitle {
-            display: inline-block; font-size: 1.5rem; font-weight: 700; color: #fff;
+            display: inline-block; font-size: 1.3rem; font-weight: 700; color: #fff;
             padding-left: 100%; animation: marquee 12s linear infinite;
         }
-        @keyframes marquee {
-            0% { transform: translateX(0); }
-            100% { transform: translateX(-100%); }
-        }
-        .artist-name {
-            font-size: 1.1rem; color: var(--neon-color); margin-top: 2px;
-        }
+        @keyframes marquee { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
+        .artist-name { font-size: 1rem; color: var(--neon-color); margin-top: 2px; }
 
-        /* CONTROLS */
-        .controls {
-            display: flex; align-items: center; gap: 20px; margin-top: 25px;
-        }
+        .controls { display: flex; align-items: center; gap: 15px; margin-top: 20px; }
         .play-btn {
-            width: 70px; height: 70px; border-radius: 50%; border: none;
+            width: 60px; height: 60px; border-radius: 50%; border: none;
             background: linear-gradient(145deg, var(--neon-color), var(--neon-dark));
-            color: #fff; font-size: 1.8rem; cursor: pointer;
-            box-shadow: 0 10px 25px rgba(255, 107, 107, 0.4);
-            transition: 0.3s; display: flex; align-items: center; justify-content: center;
+            color: #fff; font-size: 1.5rem; cursor: pointer;
+            box-shadow: 0 8px 20px rgba(255, 107, 107, 0.4);
+            display: flex; align-items: center; justify-content: center;
         }
-        .play-btn:active { transform: scale(0.9); }
         .volume-control {
-            background: rgba(255,255,255,0.05); padding: 12px 20px;
-            border-radius: 30px; display: flex; align-items: center; gap: 12px;
-            box-shadow: inset 2px 2px 5px rgba(0,0,0,0.3);
+            background: rgba(255,255,255,0.05); padding: 10px 15px;
+            border-radius: 25px; display: flex; align-items: center; gap: 10px;
         }
-        .volume-slider { width: 80px; cursor: pointer; accent-color: var(--neon-color); }
+        .volume-slider { width: 70px; cursor: pointer; accent-color: var(--neon-color); }
 
         .live-tag {
-            margin-top: 20px; display: flex; align-items: center; gap: 8px;
-            background: rgba(255,0,0,0.1); padding: 6px 15px; border-radius: 15px;
-            color: #ff4747; font-size: 0.75rem; font-weight: bold;
-            border: 1px solid rgba(255,0,0,0.2);
+            margin-top: 15px; display: flex; align-items: center; gap: 8px;
+            color: #ff4747; font-size: 0.7rem; font-weight: bold;
         }
-        .dot { width: 8px; height: 8px; background: #f00; border-radius: 50%; animation: pulse 1s infinite; }
+        .dot { width: 7px; height: 7px; background: #f00; border-radius: 50%; animation: pulse 1s infinite; }
         @keyframes pulse { 50% { opacity: 0.3; } }
     </style>
 </head>
@@ -202,7 +189,6 @@
         <div class="vinyl-player">
             <div class="vinyl-record" id="vinyl">
                 <div class="neon-ring"></div>
-                
                 <div class="cover-container">
                     <img src="https://frpadang.netlify.app/img/default.jpg" alt="Cover" class="cover-art" id="coverArt">
                 </div>
@@ -218,18 +204,18 @@
         <div class="info-display">
             <p class="now-playing-label">🎵 Now Playing</p>
             <div class="marquee-box">
-                <h2 id="songTitle">Firza Radio Padang - Streaming Music 24 Jam</h2>
+                <h2 id="songTitle">Firza Radio Padang - Music Terbaik</h2>
             </div>
             <p class="artist-name" id="artistName">Live Streaming</p>
         </div>
 
         <div class="controls">
             <div class="volume-control">
-                <i class="fas fa-volume-down" style="color:#aaa"></i>
+                <i class="fas fa-volume-down" style="color:#aaa; font-size: 0.8rem;"></i>
                 <input type="range" class="volume-slider" id="volumeSlider" min="0" max="100" value="80">
             </div>
             <button class="play-btn" id="playBtn">
-                <i class="fas fa-play" id="playIcon" style="margin-left: 5px;"></i>
+                <i class="fas fa-play" id="playIcon" style="margin-left: 3px;"></i>
             </button>
         </div>
 
@@ -273,7 +259,7 @@
                 audioPlayer.src = "";
                 isPlaying = false;
                 playIcon.className = "fas fa-play";
-                playIcon.style.marginLeft = "5px";
+                playIcon.style.marginLeft = "3px";
                 vinyl.classList.remove('playing');
                 tonearm.classList.remove('playing');
             }
@@ -294,7 +280,7 @@
                         artistName.innerText = artist;
                         fetchCover(title, artist);
                     }
-                });
+                }).catch(() => {});
         }
 
         function fetchCover(title, artist) {
@@ -310,9 +296,8 @@
                 }).catch(() => coverArt.src = CONFIG.defaultCover);
         }
 
-        // Init Particles
         const partContainer = document.getElementById('particles');
-        for (let i = 0; i < 35; i++) {
+        for (let i = 0; i < 30; i++) {
             const p = document.createElement('div');
             p.className = 'particle';
             p.style.left = Math.random() * 100 + '%';
